--- a/cuda/btx_cudamatching_model.yaml
+++ b/cuda/btx_cudamatching_model.yaml
@@ -33,6 +33,11 @@
       :type: structure
       :members:
       - :name: ^cuResult$
+        :field_class:
+          # Note: cast_type needed here because of the one API call
+          # cuexpDevice_get_primary_context_refcount_exit, which we do
+          # not need to handle and for some reason has a different type
+          :cast_type: ^CUresult$
 
   - :set_id: exits_cudaError_absent
     :domain: exits - exits_cudaError_present 
@@ -43,6 +48,20 @@
     :register: false
   - :set_id: entries_traffic
     :domain: entries & traffic
+    :register: false
+  - :set_id: entries_traffic_v2
+    :domain: entries_traffic
+    :payload_field_class:
+      :type: structure
+      :members:
+      - :name: ^ByteCount$
+        # Note: not all APIs with size_t have v2 in the name, so we
+        # need to use the actual type to distinguish newer APIs and
+        # the older ones below using 32 bit unsigned
+        :field_class:
+          :cast_type: size_t
+  - :set_id: entries_traffic_v1
+    :domain: entries_traffic - entries_traffic_v2
     :payload_field_class:
       :type: structure
       :members:
