--- a/cuda/btx_cudamatching_model.yaml
+++ b/cuda/btx_cudamatching_model.yaml
@@ -22,7 +22,6 @@
   :event_classes:
   - :set_id: entries
     :name: "_entry$"
-
   - :set_id: exits
     :register: false
     :name: "_exit$"
@@ -236,68 +235,59 @@
       - :name: ^cuResult$
       - :name: ^hfunc_val$
 
-  # device operations
-  ## memory operations
-  - :set_id: device_mem_op
-    :name: "(cuMemcpy|cuMemPrefetch|cuMemset|cuMemFree)"
+  # operations that generate thapi device events
+  - :set_id: operation
+    :name: "(cuMemcpy|cuMemPrefetch|cuMemset|cuMemFree|cuLaunch)"
     :register: false
 
-  - :set_id: device_mem_op_entry
-    :domain: entries & device_mem_op
+  - :set_id: operation_entry
+    :domain: entries & operation
     :register: false
 
-  - :set_id: device_mem_op_stream_present_entry
-    :domain: device_mem_op_entry
+  - :set_id: operation_stream_present_entry
+    :domain: operation_entry
+    :register: false
     :payload_field_class:
       :type: structure
       :members:
       - :name: ^hStream$
 
-  - :set_id: device_mem_op_stream_absent_entry
-    :domain: device_mem_op - device_mem_op_stream_present_entry
-
-  # NOTE: exit not currently used
-  - :set_id: device_mem_op_exit
-    :domain: exits & device_mem_op
-    :register: false
-    :payload_field_class:
-      :type: structure
-      :members:
-      - :name: ^cuResult$
-
-  ## kernel launches
-  - :set_id: device_kernel_launch
-    :name: "cuLaunch"
+  - :set_id: operation_stream_absent_entry
+    :domain: operation_entry - operation_stream_present_entry
     :register: false
 
-  - :set_id: device_kernel_launch_entry
-    :domain: entries & device_kernel_launch
+  # specialize for whether a funtion arg is present or not
+  - :set_id: kernel_launch_entry
+    :name: "cuLaunch[^H]"
+    :domain: operation_entry
     :register: false
     :payload_field_class:
       :type: structure
       :members:
       - :name: ^f$
 
-  - :set_id: device_kernel_launch_stream_present_entry
-    :domain: device_kernel_launch_entry
+  - :set_id: kernel_launch_stream_present_entry
+    :domain: operation_stream_present_entry & kernel_launch_entry
+    :payload_field_class:
+      :type: structure
+      :members:
+      - :name: ^hStream$
+      - :name: ^f$
+
+  - :set_id: kernel_launch_stream_absent_entry
+    :domain: kernel_launch_entry - kernel_launch_stream_present_entry
     :payload_field_class:
       :type: structure
       :members:
       - :name: ^f$
+
+  # specialize for whether a funtion arg is present or not
+  - :set_id: named_operation_stream_present_entry
+    :domain: operation_stream_present_entry - kernel_launch_stream_present_entry
+    :payload_field_class:
+      :type: structure
+      :members:
       - :name: ^hStream$
 
-  - :set_id: device_kernel_launch_stream_absent_entry
-    :domain: device_kernel_launch_entry - device_kernel_launch_stream_present_entry
-    :payload_field_class:
-      :type: structure
-      :members:
-      - :name: ^f$
-
-  # NOTE: exit not currently used
-  - :set_id: device_kernel_launch_exit
-    :domain: exits & device_kernel_launch
-    :register: false
-    :payload_field_class:
-      :type: structure
-      :members:
-      - :name: ^cuResult$
+  - :set_id: named_operation_stream_absent_entry
+    :domain: operation_stream_absent_entry - kernel_launch_stream_absent_entry
