cuda btx: add stream device test
- create context on device 1, make current
- create stream (implicitly on device 1)
- create new context on device 2, make current
- launch device function with stream (should be on device 1, even though
  2 is current)

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -13,6 +13,7 @@ noinst_HEADERS = \
 	tests_template/interval_profiling_normal.yaml.erb \
 	tests_template/interval_profiling_cuda_driver_api.yaml.erb \
 	tests_template/interval_profiling_cuda_multictx.yaml.erb \
+	tests_template/interval_profiling_cuda_multistream.yaml.erb \
 	tests_template/interval_profiling_multithread.yaml.erb \
 	tests_template/interval_profiling_kernel_name.yaml.erb \
 	tests_template/interval_common.dust.erb \
