--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -14,6 +14,7 @@ noinst_HEADERS = \
 	tests_template/interval_profiling_cuda_driver_api.yaml.erb \
 	tests_template/interval_profiling_cuda_multictx.yaml.erb \
 	tests_template/interval_profiling_cuda_multistream.yaml.erb \
+	tests_template/interval_profiling_cuda_memcpy.yaml.erb \
 	tests_template/interval_profiling_multithread.yaml.erb \
 	tests_template/interval_profiling_kernel_name.yaml.erb \
 	tests_template/interval_common.dust.erb \
