--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -498,9 +498,9 @@ def preprocess_trace(lttng_output, backends, global_barrier_h)
   raise unless mpi_local_master?
 
   if OPTIONS.include?(:trace)
-    # Do nothing
+    # Do move to $home
     opts = nil
-    ctf_output = lttng_output
+    ctf_output = File.join(env_fetch_first('HOME'), 'lttng-traces', "thapi--#{mpi_job_id}", Socket.gethostname)
   elsif OPTIONS.include?(:timeline)
     # Write Interval
     opts = 'to_interval '
@@ -513,9 +513,12 @@ def preprocess_trace(lttng_output, backends, global_barrier_h)
     ctf_output = File.join(env_fetch_first('HOME'), 'lttng-traces', "thapi_aggreg--#{mpi_job_id}", Socket.gethostname)
   end
 
-  unless opts.nil?
+  if opts
     opts << "--output #{ctf_output}"
     exec("#{BINDIR}/babeltrace_thapi #{opts} -- #{lttng_output}")
+  else
+    FileUtils.mkdir_p(File.dirname(ctf_output))
+    FileUtils.mv(lttng_output, ctf_output)
   end
 
   # Global Barrier
@@ -537,12 +540,12 @@ def postprocess(folder)
   backend_level = OPTIONS[:backend].filter { |nl| nl.include?(':') }.join(',')
 
   if OPTIONS.include?(:trace)
-    opts = 'trace'
+    opts = 'trace '
     opts << '--restrict '
     opts << '--context '
     opts << "--backend #{backends} "
   elsif OPTIONS.include?(:timeline)
-    opts = 'timeline'
+    opts = 'timeline '
     opts << "--backend #{backends} "
   else
     opts = 'tally '
