--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -113,7 +113,7 @@ end
 
 # Type is aggreg bs
 def prefix_processed_trace
-  if OPTIONS.include?(:trace)
+  if OPTIONS.include?(:trace) || !OPTIONS[:analysis]
     ''
   elsif OPTIONS.include?(:timeline)
     '_interval'
