--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -111,7 +111,7 @@ end
 #   | (_) | (_| (/_ |    |  (_|  |_ | |
 #
 
-# Type is aggreg bs
+# Prefex of the thapi_trace_dir
 def prefix_processed_trace
   if OPTIONS.include?(:trace) || !OPTIONS[:analysis]
     ''
@@ -122,10 +122,9 @@ def prefix_processed_trace
   end
 end
 
-
-# THAPI/xprof use multiple folter
+# THAPI/xprof use multiple folder
 # - lttng_trace_dir_tmp
-#     where the 'raw' lttng trace if saved.
+#     where the 'raw' lttng trace is saved.
 #     For performance we store in a `tmp` folder.
 #     When "on the fly" analys will be possible, this should not potential OOM
 # - thapi_trace_dir_tmp
@@ -193,8 +192,8 @@ FOLDER_JOBID = File.join('.thapi_lock', mpi_job_id)
 SHARED_LOCAL_FILESYSTEM = File.join('/', 'dev', 'shm', Etc.getlogin, FOLDER_JOBID)
 SHARED_GLOBAL_FILESYSTEM = File.join(env_fetch_first('HOME'), FOLDER_JOBID)
 
-# Use a log distribution seem to be a good tradeoff
-# between being nice to the FileSystem (not to many call)
+# Use a log distribution seems to be a good tradeoff
+# between being nice to the FileSystem (not too many calls)
 # but not waiting to much
 def busy_wait(&block)
   (2..).take_while { |i| block.call && sleep(Math.log(i)) }
@@ -217,7 +216,7 @@ def local_barier(name)
 end
 
 # We don't know the total number of ranks
-#   -`PALS_NRANKS` look interesting but is not exported by default
+#   -`PALS_NRANKS` looks interesting but is not exported by default
 #   - We may want to call `MPI_INIT()` our self, but that mean liking against MPI
 #     making it a pain to install / configure THAPI
 # We don't know either how many local masters we have
@@ -225,10 +224,10 @@ end
 #   - We cannot use `PBS_NODEFILE`, as people can request N nodes, but launch <N process
 #
 # At the beginning of the script, each master will create a folder.
-# Then, when hiting the barrier, each local master will remove his file
+# Then, when hitting the barrier, each local master will remove his file
 #  and wait until no more folders exist.
 #
-# This is racy! If one thread exit the barrier before any other enter it,
+# This is racy! If one thread exits the barrier before any other enters it,
 #    this thread will pass the barrier.
 # We rely/We hope, that user will call an MPI_Barrier() && that we do enough work...
 def init_global_barrier
@@ -248,7 +247,7 @@ def global_barrier(f)
   #    then master will clean the folder to be nice to the user
   #
   # Note that `mpi_master` can see the folder empty, and hence remove it
-  #   at the same time as others threads sleep. They will wake up
+  #   at the same time as other threads sleep. They will wake up
   #   and see a deleted folder.
   # Fortunately `count_file` will return -2 for a non exciting folder
   #   hence we test for > 0 and not `!= 0`
