Prepare bigger refactoring

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -50,10 +50,13 @@ bin_SCRIPTS = \
 version:
 	git describe --abbrev=7 --dirty --always --tags > version || echo $(PACKAGE_VERSION) > version
 
-data_DATA = version
+data_DATA = \
+	version \
+	optparse_thapi.rb
 
 CLEANFILES = \
 	version \
+	optparse_thapi.rb \
 	lttng/tracepoint_gen.h \
 	$(BUILT_SOURCES)
 
