Revert "btx cuda: simplify task match rule"
This reverts commit 837ee1129d154c31bbeb8d6002a8e350bdce6fb7.

Caused a major performance regression, around 50%, because it
includes cuMemGetInfo and other calls we don't need

--- a/cuda/btx_cudamatching_model.yaml
+++ b/cuda/btx_cudamatching_model.yaml
@@ -237,7 +237,7 @@
 
   # tasks that generate thapi device events
   - :set_id: task
-    :name: "cuMem|cuLaunch"
+    :name: "(cuMemcpy|cuMemPrefetch|cuMemset|cuMemFree|cuLaunch)"
     :register: false
 
   - :set_id: task_entry
